--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
+    "redux": "^3.7.2",
     "semantic-ui-react": "^0.71.0"
   },
   "scripts": {
@@ -16,5 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "prettier": "^1.5.3"
   }
 }
