--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "redux": "^3.7.2",
     "semantic-ui-react": "^0.71.0"
   },
+  "homepage": "https://rgsphilip.github.io/eco-up-pdx",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "prettier": "^1.5.3"
   }
 }
